Bug 583015 - Use ISearchContext for model search
In order to also consider dirty editors ISearchContext and the
LiveSearchContext is now used for the model search. This fixed the
problem that results where found more then once.

Furthermore problems in the LiveSearchContext where fixed, and some code
was cleaned.

Change-Id: Id63730cf1f815d089279a3c359a3e0f4e0a43c99